more or less helpful ipnb for debugging things

--- a/sync_experiments.ipynb
+++ b/sync_experiments.ipynb
@@ -77,279 +77,273 @@
             "17\n",
             "Antes1974.pdf\n",
             "18\n",
-            "Notebook2\n",
-            "19\n",
             "Chapter6-new.pdf\n",
-            "20\n",
+            "19\n",
             "bandnewsongs\n",
-            "21\n",
+            "20\n",
             "Jarodzka2010.pdf\n",
-            "22\n",
+            "21\n",
             "Math\n",
-            "23\n",
+            "22\n",
             "Rothkegel2017.pdf\n",
-            "24\n",
+            "23\n",
             "Smith2009.pdf\n",
-            "25\n",
-            "aaaaaaaaaaaaaaaaaaaaaaaa\n",
-            "26\n",
+            "24\n",
             "James_Intro_to_Statistical_Learning.pdf\n",
-            "27\n",
+            "25\n",
             "Kuemmerer_Saliency_Benchmarking.pdf\n",
-            "28\n",
+            "26\n",
             "Yantis1996.pdf\n",
-            "29\n",
+            "27\n",
             "Martinez-Conde2006.pdf\n",
-            "30\n",
+            "28\n",
             "Kaspar2011.pdf\n",
-            "31\n",
+            "29\n",
             "White2013.pdf\n",
-            "32\n",
+            "30\n",
             "Tatler2007.pdf\n",
-            "33\n",
+            "31\n",
             "Schad2018.pdf\n",
-            "34\n",
+            "32\n",
             "Kliegl2010.pdf\n",
-            "35\n",
+            "33\n",
             "Myung2003.pdf\n",
-            "36\n",
+            "34\n",
             "1308.5499.pdf\n",
-            "37\n",
+            "35\n",
             "Tatler2005.pdf\n",
-            "38\n",
+            "36\n",
             "Arons92areview.pdf\n",
-            "39\n",
+            "37\n",
             "Mathot2015.pdf\n",
-            "40\n",
+            "38\n",
             "Illian_Statistical_analysis_and_modelling_of_spatial_point_patterns.pdf\n",
-            "41\n",
+            "39\n",
             "Konkle2010.pdf\n",
-            "42\n",
+            "40\n",
             "Foulsham2010.pdf\n",
-            "43\n",
+            "41\n",
             "Henderson1999.pdf\n",
-            "44\n",
+            "42\n",
             "Clarke2014.pdf\n",
-            "45\n",
+            "43\n",
             "broadbent1954.pdf\n",
-            "46\n",
+            "44\n",
             "Zelinsky1997.pdf\n",
-            "47\n",
+            "45\n",
             "Ralf_Textbook.pdf\n",
-            "48\n",
+            "46\n",
             "Schwetlick2018.pdf\n",
-            "49\n",
+            "47\n",
             "Kruschke_Doing_Bayesian_Data_Analysis\n",
-            "50\n",
+            "48\n",
             "2017_Book_ModelingLife.pdf\n",
-            "51\n",
+            "49\n",
             "The_5 Elements_of_Effective_thinking.pdf\n",
-            "52\n",
+            "50\n",
             "1308.5499.pdf\n",
-            "53\n",
+            "51\n",
             "Kuemmerer2014.pdf\n",
-            "54\n",
+            "52\n",
             "RobertCasella_IntroducingMonteCarloMethodsWithR.pdf\n",
-            "55\n",
+            "53\n",
             "Sanocki2003.pdf\n",
-            "56\n",
+            "54\n",
             "Stoll2015.pdf\n",
-            "57\n",
+            "55\n",
             "Reinagel1999.pdf\n",
-            "58\n",
+            "56\n",
             "Harris2008.pdf\n",
-            "59\n",
+            "57\n",
             "Bates2015.pdf\n",
-            "60\n",
+            "58\n",
             "Quick sheets\n",
-            "61\n",
+            "59\n",
             "Strasburger2011.pdf\n",
-            "62\n",
+            "60\n",
             "mannan1996.pdf\n",
-            "63\n",
+            "61\n",
             "marr1982understanding.pdf\n",
-            "64\n",
+            "62\n",
             "Itti1998.pdf\n",
-            "65\n",
+            "63\n",
             "Pannasch2008.pdf\n",
-            "66\n",
+            "64\n",
             "Collewijn1988.pdf\n",
-            "67\n",
+            "65\n",
             "Rayner2009.pdf\n",
-            "68\n",
+            "66\n",
             "B05.pdf\n",
-            "69\n",
+            "67\n",
             "Hodgson2000.pdf\n",
-            "70\n",
+            "68\n",
             "DeAngelus2009.pdf\n",
-            "71\n",
+            "69\n",
             "Becker2007.pdf\n",
-            "72\n",
+            "70\n",
             "Shepard1967.pdf\n",
-            "73\n",
+            "71\n",
             "Matthis2018.pdf\n",
-            "74\n",
+            "72\n",
             "O_Regan_1992.pdf\n",
-            "75\n",
+            "73\n",
             "Cousineau2005.pdf\n",
-            "76\n",
+            "74\n",
             "Godwin2014.pdf\n",
-            "77\n",
+            "75\n",
             "Noton1971.pdf\n",
-            "78\n",
+            "76\n",
             "Melcher2006.pdf\n",
-            "79\n",
+            "77\n",
             "Einhauser2008.pdf\n",
-            "80\n",
+            "78\n",
             "Meur2015.pdf\n",
-            "81\n",
+            "79\n",
             "Foulsham2013.pdf\n",
-            "82\n",
-            "The_5 Elements_of_Effective_thinking.pdf\n",
-            "83\n",
+            "80\n",
             "Wilson2017.pdf\n",
-            "84\n",
+            "81\n",
             "Mills2011.pdf\n",
-            "85\n",
+            "82\n",
             "Rayner1998.pdf\n",
-            "86\n",
+            "83\n",
             "Schuett2017\n",
-            "87\n",
+            "84\n",
             "Rothkegel2016.pdf\n",
-            "88\n",
+            "85\n",
             "Neider2006.pdf\n",
-            "89\n",
+            "86\n",
             "churchland1994critique.pdf\n",
-            "90\n",
+            "87\n",
             "ECVP2017_abstracts_0.9.2.pdf\n",
-            "91\n",
+            "88\n",
             "Simons1997.pdf\n",
-            "92\n",
+            "89\n",
             "Nuthmann2010.pdf\n",
-            "93\n",
+            "90\n",
             "Renswoude2019.pdf\n",
-            "94\n",
+            "91\n",
             "Parkhurst2003.pdf\n",
-            "95\n",
+            "92\n",
             "Barthelme2013.pdf\n",
-            "96\n",
+            "93\n",
             "Over2007.pdf\n",
-            "97\n",
+            "94\n",
             "Mackworth1967.pdf\n",
-            "98\n",
+            "95\n",
             "Kuemmerer2018.pdf\n",
-            "99\n",
+            "96\n",
             "band\n",
-            "100\n",
+            "97\n",
             "Wood1995.pdf\n",
-            "101\n",
+            "98\n",
             "Torralba2006.pdf\n",
-            "102\n",
+            "99\n",
             "Zhou2018.pdf\n",
-            "103\n",
+            "100\n",
             "Foulsham2008.pdf\n",
-            "104\n",
+            "101\n",
             "Bass\n",
-            "105\n",
+            "102\n",
             "buswell1935people.pdf\n",
-            "106\n",
+            "103\n",
             "Duhamel1992.pdf\n",
-            "107\n",
+            "104\n",
             "Kaspar2011a.pdf\n",
-            "108\n",
+            "105\n",
             "Kliegl2010.pdf\n",
-            "109\n",
+            "106\n",
             "Posner1980.pdf\n",
-            "110\n",
+            "107\n",
             "Baker2018.pdf\n",
-            "111\n",
+            "108\n",
             "Notebook1\n",
-            "112\n",
+            "109\n",
             "Martinez-Conde2004.pdf\n",
-            "113\n",
+            "110\n",
             "Baldauf2007.pdf\n",
-            "114\n",
+            "111\n",
             "Ch6_math_modelling_ralf.pdf\n",
-            "115\n",
+            "112\n",
             "Castelhano2007.pdf\n",
-            "116\n",
+            "113\n",
             "Judd2009.pdf\n",
-            "117\n",
+            "114\n",
             "Cherry1953.pdf\n",
-            "118\n",
+            "115\n",
             "Textbook.pdf\n",
-            "119\n",
+            "116\n",
             "Kuemmerer2017.pdf\n",
-            "120\n",
+            "117\n",
             "Castelhano2009.pdf\n",
-            "121\n",
+            "118\n",
             "Schwetlick2017.pdf\n",
-            "122\n",
+            "119\n",
             "Schwetlick2016.pdf\n",
-            "123\n",
+            "120\n",
             "foulsham2012.pdf\n",
-            "124\n",
+            "121\n",
             "Simons2005.pdf\n",
-            "125\n",
+            "122\n",
             "bridgeman1992.pdf\n",
-            "126\n",
+            "123\n",
             "Posner1984.pdf\n",
-            "127\n",
+            "124\n",
             "thinkos\n",
-            "128\n",
+            "125\n",
             "Hayhoe2005.pdf\n",
-            "129\n",
+            "126\n",
             "Hollingworth2006.pdf\n",
-            "130\n",
+            "127\n",
             "deep learing\n",
-            "131\n",
+            "128\n",
             "Rolfs2012.pdf\n",
-            "132\n",
+            "129\n",
             "Nuthmann2017\n",
-            "133\n",
+            "130\n",
             "thinkcomplexity2\n",
-            "134\n",
+            "131\n",
             "Engbert2011.pdf\n",
-            "135\n",
+            "132\n",
             "Brady2011.pdf\n",
-            "136\n",
+            "133\n",
             "Kuemmerer_Information_theoretic_model_comparison_SUPPL.pdf\n",
-            "137\n",
+            "134\n",
             "Kuemmerer_2015.pdf\n",
-            "138\n",
+            "135\n",
             "morey.2008.pdf\n",
-            "139\n",
+            "136\n",
             "Kuemmerer_2015_SUPPL.pdf\n",
-            "140\n",
+            "137\n",
             "thinkbayes\n",
-            "141\n",
+            "138\n",
             "Aloimonos1991.pdf\n",
-            "142\n",
+            "139\n",
             "Greene2012.pdf\n",
-            "143\n",
+            "140\n",
             "Ditchburn1980.pdf\n",
-            "144\n",
+            "141\n",
             "Kuemmerer_Information_theoretic_model_comparison.pdf\n",
-            "145\n",
+            "142\n",
             "Borji2013.pdf\n",
-            "146\n",
+            "143\n",
             "Yarbus.pdf\n",
-            "147\n",
+            "144\n",
             "Hollingworth2006a.pdf\n",
-            "148\n",
+            "145\n",
             "Loftus1978.pdf\n",
-            "149\n",
+            "146\n",
             "Barr2013.pdf\n",
-            "150\n",
+            "147\n",
             "Engbert_2015.pdf\n",
-            "151\n",
+            "148\n",
             "Masciocchi2009.pdf\n",
-            "152\n",
+            "149\n",
             "Rothkegel2014.pdf\n"
           ]
         }
       ],
-      "execution_count": 60,
+      "execution_count": 5,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -397,7 +391,7 @@
         "syncDirectory=\"/Users/lisa/Documents/Literature\""
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -407,10 +401,10 @@
     {
       "cell_type": "code",
       "source": [
-        "i = 51"
+        "i = 90"
       ],
       "outputs": [],
-      "execution_count": 73,
+      "execution_count": 10,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -423,7 +417,7 @@
         "files = [x for x in os.listdir(remarkableBackupDirectory+remContent) if \".\" not in x]"
       ],
       "outputs": [],
-      "execution_count": 74,
+      "execution_count": 4,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -438,7 +432,7 @@
         "fname = meta['visibleName']"
       ],
       "outputs": [],
-      "execution_count": 75,
+      "execution_count": 11,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -456,7 +450,7 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 76,
+          "execution_count": 8,
           "data": {
             "text/plain": [
               "True"
@@ -465,7 +459,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 76,
+      "execution_count": 8,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -480,16 +474,40 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 77,
+          "execution_count": 12,
           "data": {
             "text/plain": [
-              "'/Users/lisa/Documents/remarkableBackup/xochitl/023c6d49-632f-4e61-8c82-baca3982f4e0'"
+              "'/Users/lisa/Documents/remarkableBackup/xochitl/666065ab-d7c8-4fbd-bf48-0d3fe5aa7de0'"
             ]
           },
           "metadata": {}
         }
       ],
-      "execution_count": 77,
+      "execution_count": 12,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.path.isfile('/Users/lisa/Documents/remarkableBackup/xochitl/666065ab-d7c8-4fbd-bf48-0d3fe5aa7de0/2.rm')"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 16,
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 16,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -1352,6 +1370,45 @@
         }
       ],
       "execution_count": 42,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emptyRm = \"/Users/lisa/Documents/remarkableBackup/empty.rm\""
+      ],
+      "outputs": [],
+      "execution_count": 17,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rm2svg(emptyRm, \"tempDir/emptyrm.svg\", coloured_annotations=False)"
+      ],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'tempDir/emptyrm.svg'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-d3405cbd5e79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrm2svg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memptyRm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"tempDir/emptyrm.svg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoloured_annotations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m~/Documents/Projects/rMTools/newLines/new_rM2svg.py\u001b[0m in \u001b[0;36mrm2svg\u001b[0;34m(input_file, output_name, coloured_annotations, x_width, y_width)\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0mabort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Not a valid reMarkable file: <header={}> <nlayers={}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m     \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"{}\" width=\"{}\">'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_width\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_width\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# BEGIN Notebook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m     output.write('''\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'tempDir/emptyrm.svg'"
+          ]
+        }
+      ],
+      "execution_count": 19,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
